feat: filtrando por readtime e dt_creation mas com bugs
